Update the README to properly list which license is on the side menu

--- a/README
+++ b/README
@@ -24,7 +24,7 @@ Template SidebarMenu/Dark
 ----------------------------------------------------------------------------
 
 Credits: (license files in each asset)
-   Sidebar Menu: Bootstrapious (MIT) (https://bootstrapious.com/p/bootstrap-sidebar)
+   Sidebar Menu: Bootstrapious (MIT License) (https://bootstrapious.com/p/bootstrap-sidebar)
    Bootstrap (https://getbootstrap.com)
    FontAwesome (https://fontawesome.com)
    jQuery (https://jquery.com)
